--- a/environments/environment-cpu.yaml
+++ b/environments/environment-cpu.yaml
@@ -1,220 +1,232 @@
-name: mjolnir
+name: lila
 channels:
-- pytorch
-- conda-forge
-- defaults
+    - pytorch
+    - conda-forge
+    - defaults
 dependencies:
-- absl-py=0.13.0
-- aiohttp=3.7.4.post0
-- appnope=0.1.2
-- argon2-cffi=20.1.0
-- async-timeout=3.0.1
-- async_generator=1.10
-- attrs=21.2.0
-- backcall=0.2.0
-- blas=1.0
-- bleach=3.3.1
-- blinker=1.4
-- brotlipy=0.7.0
-- bzip2=1.0.8
-- c-ares=1.17.1
-- ca-certificates=2021.5.30
-- cachetools=4.2.2
-- certifi=2021.5.30
-- cffi=1.14.6
-- chardet=4.0.0
-- charset-normalizer=2.0.0
-- click=8.0.1
-- coverage=5.5
-- cryptography=3.4.7
-- dataclasses=0.8
-- dbus=1.13.18
-- decorator=5.0.9
-- defusedxml=0.7.1
-- entrypoints=0.3
-- expat=2.4.1
-- ffmpeg=4.3
-- freetype=2.10.4
-- fsspec=2021.7.0
-- future=0.18.2
-- gettext=0.21.0
-- glib=2.69.0
-- gmp=6.2.1
-- gnutls=3.6.15
-- google-auth=1.33.1
-- google-auth-oauthlib=0.4.1
-- grpcio=1.35.0
-- icu=58.2
-- idna=3.1
-- importlib-metadata=3.10.0
-- importlib_metadata=3.10.0
-- intel-openmp=2021.3.0
-- ipykernel=5.3.4
-- ipython=7.22.0
-- ipython_genutils=0.2.0
-- ipywidgets=7.6.3
-- jedi=0.17.0
-- jinja2=3.0.1
-- jpeg=9b
-- jsonschema=3.2.0
-- jupyter=1.0.0
-- jupyter_client=6.1.12
-- jupyter_console=6.4.0
-- jupyter_core=4.7.1
-- jupyterlab_pygments=0.1.2
-- jupyterlab_widgets=1.0.0
-- lame=3.100
-- lcms2=2.12
-- libcxx=10.0.0
-- libffi=3.3
-- libiconv=1.16
-- libidn2=2.3.2
-- libpng=1.6.37
-- libprotobuf=3.17.2
-- libsodium=1.0.18
-- libtasn1=4.16.0
-- libtiff=4.2.0
-- libunistring=0.9.10
-- libuv=1.40.0
-- libwebp-base=1.2.0
-- libxml2=2.9.12
-- llvm-openmp=10.0.0
-- lz4-c=1.9.3
-- markdown=3.3.4
-- markupsafe=2.0.1
-- mistune=0.8.4
-- mkl=2021.3.0
-- mkl-service=2.4.0
-- mkl_fft=1.3.0
-- mkl_random=1.2.2
-- multidict=5.1.0
-- nbclient=0.5.3
-- nbconvert=6.1.0
-- nbformat=5.1.3
-- ncurses=6.2
-- nest-asyncio=1.5.1
-- nettle=3.7.3
-- ninja=1.10.2
-- notebook=6.4.0
-- numpy=1.20.3
-- numpy-base=1.20.3
-- oauthlib=3.1.1
-- olefile=0.46
-- openh264=2.1.0
-- openjpeg=2.3.0
-- openssl=1.1.1k
-- packaging=21.0
-- pandocfilters=1.4.3
-- parso=0.8.2
-- pcre=8.45
-- pexpect=4.8.0
-- pickleshare=0.7.5
-- pillow=8.3.1
-- pip=21.1.3
-- prometheus_client=0.11.0
-- prompt-toolkit=3.0.17
-- prompt_toolkit=3.0.17
-- protobuf=3.17.2
-- ptyprocess=0.7.0
-- pyasn1=0.4.8
-- pyasn1-modules=0.2.7
-- pycparser=2.20
-- pydeprecate=0.3.0
-- pygments=2.9.0
-- pyjwt=2.1.0
-- pyopenssl=20.0.1
-- pyparsing=2.4.7
-- pyqt=5.9.2
-- pyrsistent=0.17.3
-- pysocks=1.7.1
-- python=3.8.10
-- python-dateutil=2.8.2
-- python_abi=3.8
-- pytorch=1.9.0
-- pytorch-lightning=1.3.8
-- pyu2f=0.1.5
-- pyzmq=20.0.0
-- qt=5.9.7
-- qtconsole=5.1.0
-- qtpy=1.9.0
-- readline=8.1
-- requests=2.26.0
-- requests-oauthlib=1.3.0
-- rsa=4.7.2
-- send2trash=1.5.0
-- setuptools=52.0.0
-- sip=4.19.8
-- six=1.16.0
-- sqlite=3.36.0
-- tensorboard=2.4.1
-- tensorboard-plugin-wit=1.8.0
-- terminado=0.9.4
-- testpath=0.5.0
-- tk=8.6.10
-- torchaudio=0.9.0
-- torchmetrics=0.4.1
-- torchvision=0.10.0
-- tornado=6.1
-- tqdm=4.61.2
-- traitlets=5.0.5
-- typing-extensions=3.10.0.0
-- typing_extensions=3.10.0.0
-- urllib3=1.26.6
-- wcwidth=0.2.5
-- webencodings=0.5.1
-- werkzeug=2.0.1
-- wheel=0.36.2
-- widgetsnbextension=3.5.1
-- xz=5.2.5
-- yaml=0.2.5
-- yarl=1.6.3
-- zeromq=4.3.4
-- zipp=3.5.0
-- zlib=1.2.11
-- zstd=1.4.9
-- pip:
-  - appdirs==1.4.4
-  - backports-entry-points-selectable==1.1.0
-  - black==21.7b0
-  - cerberus==1.3.2
-  - cfgv==3.3.0
-  - configparser==5.0.2
-  - cycler==0.10.0
-  - cytoolz==0.11.0
-  - distlib==0.3.2
-  - docker-pycreds==0.4.0
-  - filelock==3.0.12
-  - flake8==3.9.2
-  - funcy==1.15
-  - gin-config==0.3.0
-  - gitdb==4.0.7
-  - gitpython==3.1.18
-  - identify==2.2.11
-  - isort==5.9.2
-  - kiwisolver==1.3.1
-  - matplotlib==3.4.2
-  - mccabe==0.6.1
-  - munch==2.5.0
-  - mypy-extensions==0.4.3
-  - nodeenv==1.6.0
-  - pathspec==0.9.0
-  - pathtools==0.1.2
-  - platformdirs==2.1.0
-  - pre-commit==2.13.0
-  - promise==2.3
-  - psutil==5.8.0
-  - pycodestyle==2.7.0
-  - pyflakes==2.3.1
-  - pyyaml==5.3.1
-  - quinine==0.2.3
-  - regex==2021.7.6
-  - sentry-sdk==1.3.0
-  - shortuuid==1.0.1
-  - smmap==4.0.0
-  - subprocess32==3.5.4
-  - toml==0.10.2
-  - tomli==1.1.0
-  - toolz==0.11.1
-  - toposort==1.5
-  - virtualenv==20.6.0
-  - wandb==0.11.0
+    - absl-py=0.12.0
+    - aiohttp=3.7.4
+    - appnope=0.1.2
+    - argon2-cffi=20.1.0
+    - async-timeout=3.0.1
+    - async_generator=1.10
+    - attrs=20.3.0
+    - backcall=0.2.0
+    - backports=1.0
+    - backports.functools_lru_cache=1.6.1
+    - blas=1.0
+    - bleach=3.3.0
+    - blinker=1.4
+    - brotlipy=0.7.0
+    - bzip2=1.0.8
+    - c-ares=1.17.1
+    - ca-certificates=2020.12.5
+    - cachetools=4.2.1
+    - certifi=2020.12.5
+    - cffi=1.14.5
+    - chardet=4.0.0
+    - click=7.1.2
+    - coverage=5.5
+    - cryptography=3.4.6
+    - cython=0.29.17
+    - dbus=1.13.18
+    - decorator=4.4.2
+    - defusedxml=0.7.1
+    - entrypoints=0.3
+    - expat=2.2.10
+    - ffmpeg=4.3
+    - freetype=2.10.4
+    - fsspec=0.8.7
+    - future=0.18.2
+    - gettext=0.19.8.1
+    - glib=2.67.4
+    - gmp=6.2.1
+    - gnutls=3.6.5
+    - google-auth=1.24.0
+    - google-auth-oauthlib=0.4.1
+    - grpcio=1.36.1
+    - icu=58.2
+    - idna=2.10
+    - importlib-metadata=2.0.0
+    - importlib_metadata=2.0.0
+    - intel-openmp=2019.4
+    - ipykernel=5.3.4
+    - ipython=7.21.0
+    - ipython_genutils=0.2.0
+    - ipywidgets=7.6.3
+    - jedi=0.17.0
+    - jinja2=2.11.3
+    - jpeg=9b
+    - jsonschema=3.2.0
+    - jupyter=1.0.0
+    - jupyter_client=6.1.7
+    - jupyter_console=6.2.0
+    - jupyter_core=4.7.1
+    - jupyterlab_pygments=0.1.2
+    - jupyterlab_widgets=1.0.0
+    - lame=3.100
+    - lcms2=2.11
+    - libcxx=10.0.0
+    - libedit=3.1.20191231
+    - libffi=3.3
+    - libiconv=1.16
+    - libpng=1.6.37
+    - libprotobuf=3.14.0
+    - libsodium=1.0.18
+    - libtiff=4.1.0
+    - libuv=1.40.0
+    - lz4-c=1.9.3
+    - markdown=3.3.4
+    - markupsafe=1.1.1
+    - mistune=0.8.4
+    - mkl=2019.4
+    - mkl-service=2.3.0
+    - mkl_fft=1.3.0
+    - mkl_random=1.1.1
+    - multidict=5.1.0
+    - nbclient=0.5.3
+    - nbconvert=6.0.7
+    - nbformat=5.1.2
+    - ncurses=6.2
+    - nest-asyncio=1.5.1
+    - nettle=3.4.1
+    - ninja=1.10.2
+    - notebook=6.2.0
+    - oauthlib=3.0.1
+    - olefile=0.46
+    - openh264=2.1.0
+    - openssl=1.1.1j
+    - packaging=20.9
+    - pandoc=2.11.4
+    - pandocfilters=1.4.3
+    - parso=0.8.1
+    - pcre=8.44
+    - pexpect=4.8.0
+    - pickleshare=0.7.5
+    - pillow=8.1.2
+    - pip=21.0.1
+    - prometheus_client=0.9.0
+    - prompt-toolkit=3.0.8
+    - prompt_toolkit=3.0.8
+    - protobuf=3.14.0
+    - ptyprocess=0.7.0
+    - pyasn1=0.4.8
+    - pyasn1-modules=0.2.7
+    - pycparser=2.20
+    - pygments=2.8.1
+    - pyjwt=2.0.1
+    - pyopenssl=20.0.1
+    - pyparsing=2.4.7
+    - pyqt=5.9.2
+    - pyrsistent=0.17.3
+    - pysocks=1.7.1
+    - python=3.8.8
+    - python-dateutil=2.8.1
+    - python_abi=3.8
+    - pytorch=1.8.0
+    - pytorch-lightning=1.2.3
+    - pyzmq=20.0.0
+    - qt=5.9.7
+    - qtconsole=5.0.2
+    - qtpy=1.9.0
+    - readline=8.1
+    - requests=2.25.1
+    - requests-oauthlib=1.3.0
+    - rsa=4.7.2
+    - send2trash=1.5.0
+    - setuptools=52.0.0
+    - sip=4.19.8
+    - six=1.15.0
+    - sqlite=3.33.0
+    - tensorboard=2.4.1
+    - tensorboard-plugin-wit=1.8.0
+    - terminado=0.9.2
+    - testpath=0.4.4
+    - tk=8.6.10
+    - torchaudio=0.8.0
+    - torchvision=0.9.0
+    - tornado=6.1
+    - tqdm=4.59.0
+    - traitlets=5.0.5
+    - typing-extensions=3.7.4.3
+    - typing_extensions=3.7.4.3
+    - urllib3=1.26.3
+    - wcwidth=0.2.5
+    - webencodings=0.5.1
+    - werkzeug=1.0.1
+    - wheel=0.36.2
+    - widgetsnbextension=3.5.1
+    - xz=5.2.5
+    - yaml=0.2.5
+    - yarl=1.6.3
+    - zeromq=4.3.3
+    - zipp=3.4.0
+    - zlib=1.2.11
+    - zstd=1.4.5
+    - pip:
+          - annoy==1.17.0
+          - appdirs==1.4.4
+          - black==20.8b1
+          - cerberus==1.3.2
+          - cfgv==3.2.0
+          - configparser==5.0.2
+          - cycler==0.10.0
+          - cytoolz==0.11.0
+          - distlib==0.3.1
+          - docker-pycreds==0.4.0
+          - fasteners==0.16.2
+          - filelock==3.0.12
+          - flake8==3.8.4
+          - funcy==1.15
+          - gin-config==0.3.0
+          - gitdb==4.0.5
+          - gitpython==3.1.14
+          - glfw==2.1.0
+          - h5py==3.2.1
+          - hid==1.0.4
+          - huggingface-hub==0.0.8
+          - identify==2.1.1
+          - imageio==2.9.0
+          - isort==5.7.0
+          - joblib==1.0.1
+          - jsonlines==2.0.0
+          - kiwisolver==1.3.1
+          - llvmlite==0.36.0
+          - matplotlib==3.3.4
+          - mccabe==0.6.1
+          - mujoco-py==2.0.2.13
+          - munch==2.5.0
+          - mypy-extensions==0.4.3
+          - nodeenv==1.5.0
+          - numba==0.53.1
+          - numpy==1.20.3
+          - pathspec==0.8.1
+          - pathtools==0.1.2
+          - pre-commit==2.11.1
+          - promise==2.3
+          - psutil==5.8.0
+          - pybullet==3.1.7
+          - pycodestyle==2.6.0
+          - pyflakes==2.2.0
+          - pygame==2.0.1
+          - pyyaml==5.3.1
+          - quinine==0.2.3
+          - regex==2020.11.13
+          - robosuite==1.2.1
+          - sacremoses==0.0.45
+          - scipy==1.6.3
+          - sentencepiece==0.1.95
+          - sentry-sdk==1.0.0
+          - shortuuid==1.0.1
+          - smmap==3.0.5
+          - subprocess32==3.5.4
+          - tokenizers==0.10.3
+          - toml==0.10.2
+          - toolz==0.11.1
+          - toposort==1.5
+          - transformers==4.6.1
+          - typed-argument-parser==1.6.1
+          - typed-ast==1.4.2
+          - typing-inspect==0.6.0
+          - virtualenv==20.4.2
+          - wandb==0.10.22
